docs/files/kubernetes/ingress/06-k8s-dashboard-ingress-with-tls-and-basic-auth.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: kube-system.ingress
    namespace: kube-system
    annotations:
      # 有一点值得注意，新旧版本的 nginx ingres 对 ingress annotation 格式的支持是不一样的
      # 新版本: nginx.ingress.kubernetes.io/auth-type: basic
      # 旧版本: ingress.kubernetes.io/auth-type: basic

      # type of authentication
      ingress.kubernetes.io/auth-type: basic
      # name of the secret that contains the user/password definitions
      ingress.kubernetes.io/auth-secret: basic-auth
      # message to display with an appropriate context why the authentication is required
      ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
      # 由于最新的 k8s 中的 kubernetes-dashboard 强制要求 https，而 ingress nginx 默认是走 http 的，所以需要开启这项。
      ingress.kubernetes.io/secure-backends: "true" 
  spec:
    rules:
    - host: k8s-dashboard.domain.com
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
          path: /
    tls:
    - hosts:
      - k8s-dashboard.domain.com
      secretName: domain-tls                                  
kind: List
