docs/files/kubernetes/ingress/06-k8s-dashboard-ingress-with-tls.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: kube-system.ingress
    namespace: kube-system   
  spec:
    rules:
    - host: k8s-dashboard.domain.com
      http:
        paths:
        - backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
          path: /
    tls:
    - hosts:
      - k8s-dashboard.domain.com
      secretName: domain-tls                                  
kind: List
